--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,10 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The skeleton application for the Laravel framework.",
-    "keywords": ["laravel", "framework"],
+    "keywords": [
+        "laravel",
+        "framework"
+    ],
     "license": "MIT",
     "require": {
         "php": "^8.2",
@@ -56,8 +59,10 @@
             "npx concurrently -c \"#93c5fd,#c4b5fd,#fb7185,#fdba74\" \"php artisan serve\" \"php artisan queue:listen --tries=1\" \"php artisan pail --timeout=0\" \"npm run dev\" --names=server,queue,logs,vite"
         ],
         "test": [
+            "@php artisan make:database-sqlite booking_room_meeting_testing",
             "@php artisan config:clear --ansi",
-            "@php artisan test"
+            "@php artisan test",
+            "@php -r \"unlink('database/booking_room_meeting_testing.sqlite');\""
         ]
     },
     "extra": {
