--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,8 +18,23 @@
     "rules": {
         "react/react-in-jsx-scope": "off",
         "react/prop-types": "off",
-        "react/no-unescaped-entities": "off"
+        "react/no-unescaped-entities": "off",
+        "@typescript-eslint/no-explicit-any": "off",
+        "@typescript-eslint/no-unused-vars": "off",
+        "prettier/prettier": [
+            "error",
+            {
+                "singleQuote": true,
+                "trailingComma": "all",
+                "semi": false,
+                "tabWidth": 4,
+                "printWidth": 80
+            }
+        ]
     },
+    "plugins": [
+        "prettier"
+    ],
     "settings": {
         "react": {
             "version": "detect"
